gcc/testsuite/gdc.test/compilable/ice10431b.d
struct X(alias Y)
{
}

struct A
{
    int[] data;
}

alias X!(A([])) X1;
alias X!(A([])) X2;
