gcc/testsuite/gdc.test/fail_compilation/fail6781.d
void bug6781(alias xxx)() {
    some_error;
}
struct C6781 {
    void makeSortedIndices() {
        int greater;
        bug6781!greater();
    }
}
